--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "lint:fix": "eslint --fix src/**/*",
+    "lint": "eslint",
+    "lint:fix": "eslint --fix .",
     "preview": "vite preview",
     "format": "prettier --write ."
   },
